src/css/general/theme.css
/* ... */
.filter-container-no-border {
    border: 0;
}

.filter-container .content-block-header {
    background-color: #E6E5E3;
    color: #3D3B36;
}

.filter-container .title-text-header {
    font-size: 1rem;
}

.filter-container .content-block-body {
    background-color: #E6E5E3;
    min-height: 150px;
}

.filter-container .content-block-footer {
    border-top: 5px solid #B1AEA7;
    background-color: #7A756C;
    padding-top: 1em;
    height: 1.5em;
}

.filter-container .selected {
    background-color: #453191;
    color: #fff;
}

.filter-container .even-row {
    background-color: rgba(0, 0, 0, .05);
    cursor: pointer;
}

.filter-container .odd-row .selected {
    background: #6153A5;
}

.filter-container .even-row:hover {
    background-color: #1578dc1f;
}

.filter-container .odd-row {
    background-color: #fff;
    cursor: pointer;
}

.filter-container .odd-row:hover {
    background-color: #1578dc1f;
}

.filter-container .footer {
    background-color: #1578dc1f;
    padding-top: 1em;
    height: 2em;
}

/*Popover Styling*/

.popover-title {
    background-color: #4D4283;
    border-bottom: 1px solid #46415C;
    color: #fff;
    vertical-align: middle;
    white-space: nowrap;
}


.owner-popover {
    min-width: 500px;
}

.success-toast {
    background-color: #FFF;
    color: #000000;
    border: 2px solid green;
    border-left: 8px solid green;
    padding: 2px;
    z-index: 3000;
    width: 775px;
}

.error-toast {
    background-color: #FFF;
    color: #000000;
    border: 2px solid #dc3545;
    border-left: 8px solid #dc3545;
    font-size: 15px;
    width: 775px;
    z-index: 3000;
}

.information-toast {
    background-color: #FFF;
    color: #000000;
    border: 2px solid #1989F9;
    border-left: 8px solid #1989F9;
    padding: 1px;
    width: 775px;
    z-index: 3000;
}

.information-toast-close-button {
    color: #1989F9;
}

.warning-toast {
    background-color: #FFF;
    border: 2px solid #f9c116;
    border-left: 8px solid #f9c116;
    padding: 1px;
    width: 775px;
    z-index: 3000;
}

.warning-toast-close-button {
    color: #f9c116;
}

.toast-wrapper {
    z-index: 1500;
    position: fixed;
    bottom: 2em;
    left: 1em;
    width: 600px;
}

.toast-container {
    position: fixed;
    bottom: 2em;
    opacity: 1;
}

.bottom-zoom-btns {
    /*position: fixed;*/
    right: 0;
    bottom: 0;
    left: 0;
    text-align: right;
}


/* Pipeline Summary Card styling */
.pipeline-summary-card .card-footer {
    padding: 5px;
}

/* End Pipeline Summary Card styling */

.no-resize {
    resize: none;
}

/*Media Queries*/
@media (max-width: 1024px) {
    .inline-search-filter {
        min-width: 150px;
    }

    .vertical-tab-container-search .inline-search-filter {
        min-width: 55px;
    }

    .stacked-vertical-tab .inline-select-filter {
        min-width: 80px;
    }

    .inline-select-filter {
        min-width: 100px;
    }
}

@media (min-width: 1024px) {
    .inline-client-side-search-input {
        min-width: 150px;
    }

    .vertical-tab-container-search .inline-search-filter {
        min-width: 107px;
    }

    .inline-search-filter {
        min-width: 350px;
    }

    .stacked-vertical-tab .inline-select-filter {
        min-width: 110px;
    }

    .inline-select-filter {
        min-width: 250px;
    }
    .overlay-panel-body {
        overflow-x: hidden;        
    }
}

@media (min-width: 1500px) {
    .inline-client-side-search-input {
        min-width: 500px;
    }
}

/*TODO: Create container.css and pull all container-related styling into there*/

/* Overlay Panel styling */
.right-side-overlay {
    right: 0;
    box-shadow: -15px 0 0 rgba(0, 0, 0, .1);
}

.left-side-overlay {
    left: 0;
}

.center-overlay {
    width: 75%;
    left: 12.5%;
    right: 12.5%;
    margin: 10px auto;
}

.small-center-overlay {
    width: 50%;
    left: 25%;
    right: 25%;
    margin: 10px auto;
}

.full-width-center-overlay {
    margin: 10px;
    /* full-height - button panel height */
    height: calc(100% - 63px);
}

.full-screen-center-overlay {
    /*
      full-height - button panel height
      - top + bottom margins
      - opsera footer
     */
    height: calc(100vh - 20px - 21px);
}

.full-screen-center-overlay-with-buttons {
    /*
      full-height - button panel height
      - top + bottom margins
      - opsera footer
      - button container size (with margins)
     */
    height: calc(100vh - 20px - 21px - 38px - 1rem);
}

.full-screen-overlay-panel-body {
    overflow-y: auto;
    /* full-height - (10px x 2 top + bottom margins - button panel height) */
    height: calc(100vh - 20px - 70px);
    max-height: calc(100vh - 20px - 70px);
}

.full-screen-overlay-panel-body-with-buttons {
    overflow-y: auto;
    /*
      full-height
      - top + bottom margins
      - title height
      - button panel height (with margins)
      - footer height
    */
    height: calc(100vh - 20px - 48px - 40px - 3rem);
    max-height: calc(100vh - 20px - 48px - 40px - 3rem);
}

.full-screen-overlay-selection-container {
    overflow-y: auto;
    /* full-height
    - top + bottom margins
    - title height
    - button panel height
    - filter container taken space
    */
    height: calc(100vh - 20px - 48px - 63px - 85px);
    max-height: calc(100vh - 20px - 48px - 63px - 85px);
}

.full-screen-overlay-tab-panel-body-with-buttons {
    overflow-y: hidden;
    height: calc(100vh - 20px - 48px - 63px - 32px);
    max-height: calc(100vh - 20px - 48px - 63px - 32px);
    border-bottom: 1px solid #dee2e6;
}

.full-screen-overlay-tab-panel-inner-body-with-buttons {
    overflow-y: auto;
    height: calc(100vh - 20px - 48px - 63px - 68px);
    max-height: calc(100vh - 20px - 48px - 63px - 68px);
}

.overlay-margin {
    /* height is 100% - 10px x2 top and bottom margins */
    height: calc(100% - 20px);
    margin: 10px;
}

.center-overlay-shadow-background {
    width: 100%;
    background-color: rgba(0,0,0,0.7);
}

.info-overlay {
    z-index: 5000;
}
/* ... */

